--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,11 @@ allprojects {
         jcenter()
         mavenCentral()
     }
+    gradle.projectsEvaluated {
+        tasks.withType(JavaCompile) {
+            options.compilerArgs << "-Xlint:unchecked" << "-Xlint:deprecation"
+        }
+    }
 }
 
 task clean(type: Delete) {
