fix a bug of android 9.0 can't request data

--- a/gradle.properties
+++ b/gradle.properties
@@ -12,4 +12,7 @@ org.gradle.jvmargs=-Xmx1536m
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 
-
+KEY_PATH=D\:/AndroidKeyStore/petits_raids.jks
+KEY_PASS=asdjkl
+ALIAS_NAME=petits_raids_first
+ALIAS_PASS=jkljkl
